# 40.-BwInf-2.-Runde

./: README.md
1_Muellabfuhr/: CMakeLists.txt  Heuristik.cpp  Heuristik.h  heuristik.py  main.cpp
2_Rechenraetsel/: .gitignore  CMakeLists.txt  main.cpp  test.py
3_Hexmax/: .gitignore  CMakeLists.txt  DPSolver.cpp  DPSolver.h  Solver.cpp  Solver.h  State.cpp  State.h  TSPSolver.cpp  TSPSolver.h  Zustand.cpp  Zustand.h  generateExample.py  main.cpp
3_Hexmax/Eingabe/: hexmaxc0.txt  hexmaxc1.txt  hexmaxc2.txt  hexmaxc3.txt
4_Stapel/: .gitignore  BruteforceSolver.cpp  BruteforceSolver.h  CMakeLists.txt  ISDSolver.cpp  ISDSolver.h  MeetInTheMiddle.cpp  MeetInTheMiddle.h  Resubstitution.cpp  Resubstitution.h  ResubstitutionSolver.cpp  ResubstitutionSolver.h  Utils.cpp  Utils.h  beispielgenerator.py  filter.py  gauss.py  main.cpp  random_search.py  rng.py  sat.py  solutions.txt  test.py
4_Stapel/Eingabe/: stapelc0.txt  stapelc0_loesung.txt  stapelc1_loesung.txt
4_Stapel/python/: beispielgenerator.py  filter.py  gauss.py  lee_brickell.py  random_search.py  rng.py  sat.py  stern.py  test.py  ueberschlag.py
Doku/: .gitignore  allgemeines.tex  aufgabe3.tex  aufgabe4.tex  ausgabenGenerieren3.py  ausgabenGenerieren4.py  preamble.tex  quellen.bib
Doku/Ausgaben/: hexmax0.txt  hexmax1.txt  hexmax1_umlegungen_greedy.txt  hexmax2.txt  hexmax2_umlegungen_kurz.txt  hexmax3_umlegungen_greedy.txt  hexmax5.txt  hexmaxc0.txt  hexmaxc1.txt  hexmaxc2.txt  stapel0_bruteforce.txt  stapel0_isd.txt  stapel2_isd.txt  stapel3_isd.txt  stapel5_bruteforce.txt  stapelc0_isd.txt  (+2 more)
(+36 files in other folders)
